Fix TOC list spacing
Fix #33
Close #49

--- a/themes/documentation/source/core/css/table-of-contents.css
+++ b/themes/documentation/source/core/css/table-of-contents.css
@@ -17,9 +17,9 @@
 
 .toc-subsection-title li {
     color: #000;
-    margin-left: 2.4rem;
+    margin: 1.6rem 0 0 2.4rem;
     list-style: none;
-    line-height: 3.2rem;
+    line-height: 2rem;
 }
 
 .toc-section-title,
